resources/css/kittyStyle.css
body {
      background: #f5f5f5 url(https://64.media.tumblr.com/b9569ba34daca64ccb84bcff77b6efeb/5b2b6fc3dc12a5a9-93/s75x75_c1/63c7804d1621093de86680a3393164e86340c096.gifv) fixed;
      font-family: 'pixelify sans', 'courier new', lato, calibri, Verdana;
      font-size: 11px;
      color: #888;
      letter-spacing: 1px;
    }

    a:link,
    a:visited,
    a:active {
      color: #555;
      text-decoration: none;
    }

    a:hover {
      color: #999;
    }

    b {
      color: #5BC0AE;
      font-weight: bold;
    }

    i {
      color: #FF84B2;
      font-style: normal;
    }

    ::-webkit-scrollbar-thumb {
      background-color: #5BC0AE;
      border-radius: 5px;
      border: 0px solid #6ECA7A;
    }

    ::-webkit-scrollbar {
      width: 5px;
      height: 0px;
      background: transparent;
    }

    #header {
      position: absolute;
      top: 78px;
      left: 300px;
      width: 250px;
      height: 40px;
      background: #FEB2CE;
      border-top-right-radius: 15px;
      border-top-left-radius: 15px;
      text-align: center;
      color: #fff;
      padding: 4px;
      font: 30px 'pixelify sans', monospace;
      border-right: 1px solid #ff83b2;
      line-height: 40px;
    }

    #sidebar {
      position: absolute;
      top: 130px;
      left: 300px;
      width: 170px;
      background: #fff;
      padding: 4px;
      border-top-left-radius: 15px;
      border-left: 1px solid #FF84B2;
      border-top: 1px solid #FF84B2;
      border-right: 1px solid #FF84B2;
    }

    .sideimg {
      width: 170px;
      border-top-left-radius: 15px;
      border-top-right-radius: 15px;
    }

    .sidetitle {
      background: #FFEDFB;
      font: 20px 'pixelify sans', arial;
      color: #5BC0AE;
      border-radius: 15px;
      text-align: center;
      border-bottom: 4px solid #FEB2CE;
      margin-bottom: 4px;
    }

    #content {
      position: absolute;
      top: 130px;
      left: 478px;
      width: 400px;
      background: #fff;
      padding: 4px;
      border-top: 1px solid #FF84B2;
      border-right: 1px solid #FF84B2;
      border-bottom: 1px solid #FF84B2;
      border-bottom-right-radius: 15px;
      border-top-right-radius: 15px;
    }

    .contenttitle {
      background: #FFEDFB;
      font: 26px 'pixelify sans', arial;
      color: #5BC0AE;
      border-radius: 15px;
      text-align: center;
      border-bottom: 4px solid #FEB2CE;
      margin-bottom: 4px;
    }

    #menu {
      position: absolute;
      top: 180px;
      left: 888px;
      width: 140px;
    }

    #menu a {
      display: inline-block;
      background: #5BC0AE;
      margin-bottom: 4px;
      padding: 1px;
      padding-top: 2px;
      width: 136px;
      line-height: 12px;
      font: normal 12px monospace;
      text-transform: uppercase;
      letter-spacing: 3px;
      text-align: center;
      border-top-right-radius: 15px;
      border-bottom-right-radius: 15px;
      color: #fff;
    }

    .scrollable-div {
      width: 300px;
      height: 150px;
      border: 1px solid #ccc;
      padding: 10px;
      overflow-y: scroll;
      /* enables vertical scrolling */
      background-color: #fcf5fb;
      text-align: left;
    }

    .rounded-btn {
      background-color: #FFEDFB;
      /* Light blue */
      color: #888;
      /* Black text */
      border: none;
      border-radius: 999px;
      /* Fully rounded */
      padding: 10px 20px;
      font-size: 16px;
      cursor: pointer;
      transition: background-color 0.3s ease;
    }

    .rounded-btn:hover {
      background-color: #fcc9d3;
      /* Slightly darker blue on hover */
    }

    input {
      background-color: #ffe6eb;
      /* soft pink */
      color: #888;
      /* light grey text */
      border: 1px solid #ccc;
      /* optional: subtle border */
      padding: 2px;
      /* optional: better spacing */
      border-radius: 3px;
      /* optional: rounded corners */
    }

